--- a/src/components/MultiStepIndicator/__stories__/multiStepIndicator.stories.scss
+++ b/src/components/MultiStepIndicator/__stories__/multiStepIndicator.stories.scss
@@ -7,7 +7,7 @@
     flex-direction: column;
     gap: 30px;
   }
-  
+
   &_row-wrapper {
     display: flex;
     align-items: center;
@@ -21,7 +21,7 @@
   &_size {
     width: 700px;
   }
-  
+
   &_big-size {
     width: 100%;
   }
@@ -49,9 +49,9 @@
 
   &_line {
     margin-left: -40px;
-    .monday-style-divider {
+    &_divider {
       width: 120px;
-    } 
+    }
   }
 
   &_overflow {
