--- a/src/components/Steps/Steps.scss
+++ b/src/components/Steps/Steps.scss
@@ -28,7 +28,8 @@
       @include focus-style;
       transform-origin: center;
       transform: scale(1);
-      transition: transform var(--motion-productive-long) var(--motion-timing-transition), background var(--motion-productive-long) var(--motion-timing-transition);
+      transition: transform var(--motion-productive-long) var(--motion-timing-transition),
+        background var(--motion-productive-long) var(--motion-timing-transition);
       &:hover {
         transform: scale(1.3);
       }
@@ -58,7 +59,9 @@
       @include theme-prop(color, icon-color);
       width: 15.5px;
       height: 15.5px;
-
+      &.disabled {
+        @include theme-prop(color, disabled-text-color);
+      }
     }
 
     &--backward {
@@ -75,8 +78,6 @@
         margin-left: $spacing-small-medium;
       }
     }
-
-
   }
   &--content-on-top {
     .monday-style-steps-header {
