design review fixes

--- a/src/components/Modal/__stories__/Modal.stories.scss
+++ b/src/components/Modal/__stories__/Modal.stories.scss
@@ -1,10 +1,19 @@
 @import "../../../styles/themes";
 
 .monday-storybook-modal {
-  &-dialog-wrapper {
-    position: sticky !important;
-    transform: none !important;
-    bottom: 50% !important;
+  &-dialog {
+    &-wrapper {
+      position: sticky !important;
+      transform: none !important;
+      bottom: 50% !important;
+    }
+    &-content {
+      margin-bottom: var(--spacing-large);
+      margin-inline: var(--spacing-large);
+    }
+    &-heading {
+      padding: 0;
+    }
   }
 
   &-new {
