--- a/src/components/Tipseen/__stories__/tipseen.stories.scss
+++ b/src/components/Tipseen/__stories__/tipseen.stories.scss
@@ -1,7 +1,19 @@
 @import "../../../styles/themes";
+@import "../../../styles/global-css-settings";
 @import "../../../styles/typography";
 
+$component-rules-grid-gap: $spacing-xxl;
+$tipseen-rules-cell-min-width: 476px;
+$component-rules-grid-cell-array-calc: calc(50% - #{$tipseen-rules-cell-min-width});
+
 .monday-storybook-tipseen {
+  &_rules {
+    @include grid-auto-fit(
+      $grid-gap: $component-rules-grid-gap,
+      $grid-cell-min-width: $tipseen-rules-cell-min-width,
+      $grid-cell-array-calc: $component-rules-grid-cell-array-calc,
+      $important: true);
+  }
   &_container {
     width: 20px;
     height: 180px;
