Feature/sergeyro/steps story clickable example (#1106)
* Steps: Tipseen clickable example

* Navigable Steps example

* TipseenWizardProps extend StepsProps

* Navigable Steps example - fix dots navigation

* Fix

* Fix steps icon disabled color

* Steps stories - design review fixes

* Update snapshots

--- a/src/components/Steps/__stories__/steps.stories.scss
+++ b/src/components/Steps/__stories__/steps.stories.scss
@@ -10,12 +10,6 @@
     width: 100px;
   }
 
-  &_column-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
   &_spacing {
     margin-left: 90px;
   }
@@ -36,6 +30,7 @@
   }
 
   &_color {
+    padding: var(--spacing-small);
     @include theme-prop(background-color, primary-color);
   }
 }
