--- a/src/components/Counter/Counter.module.scss
+++ b/src/components/Counter/Counter.module.scss
@@ -11,7 +11,7 @@
 }
 
 .withAnimation {
-  animation: circlePop var(--motion-expressive-short);
+  animation: counter-pop-elastic var(--motion-expressive-short);
 }
 
 .sizeSmall {
@@ -105,17 +105,6 @@
   box-shadow: 0 0 0 1px var(--primary-background-hover-color) inset !important;
 }
 
-@keyframes circlePop {
-  0% {
-    transform: scale(1);
-  }
-  33% {
-    transform: scale(1.1);
-  }
-  66% {
-    transform: scale(0.97);
-  }
-  100% {
-    transform: scale(1);
-  }
+@include keyframe(counter-pop-elastic) {
+  @include pop-elastic();
 }
