Story (dev) for chip with overflowing Tooltip

--- a/src/components/Chips/__stories__/chips.stories.scss
+++ b/src/components/Chips/__stories__/chips.stories.scss
@@ -45,4 +45,17 @@
       @include theme-prop(color, secondary-text-color);
     }
   }
+
+  &_overflowing_chip {
+    width: 150px;
+  }
+
+  &_overflowing_chip_container {
+    width: 150px;
+    display: inline-flex;
+
+    &--chip {
+      margin: 0;
+    }
+  }
 }
