Default cursor fix; more demo examples

--- a/src/components/Chips/Chips.module.scss
+++ b/src/components/Chips/Chips.module.scss
@@ -54,6 +54,10 @@
       @include theme-prop(color, disabled-text-color);
     }
   }
+
+  &.defaultCursor {
+    cursor: default;
+  }
 }
 
 @include keyframe(chips-pop-in-emphasized) {
