--- a/src/components/Dialog/Dialog.scss
+++ b/src/components/Dialog/Dialog.scss
@@ -30,3 +30,27 @@ $arrow-size: 12px;
     left: 1px;
   }
 }
+
+.monday-style-dialog-content-component {
+  &.top, &.right, &.left, &.bottom {
+    padding: var(--spacing-xs);
+  }
+  &.bottom-start, &.top-start, &.bottom-end, &.top-end {
+    padding-block: var(--spacing-xs);
+  }
+  &.bottom-start, &.top-start {
+    padding-inline-end: var(--spacing-xs);
+  }
+  &.bottom-end, &.top-end {
+    padding-inline-start: var(--spacing-xs);
+  }
+  &.left-start, &.right-start, &.left-end, &.right-end {
+    padding-inline: var(--spacing-xs);
+  }
+  &.left-start, &.right-start {
+    padding-block-end: var(--spacing-xs);
+  }
+  &.left-end, &.right-end {
+    padding-block-start: var(--spacing-xs);
+  }
+}
