--- a/src/components/Tooltip/Tooltip.module.scss
+++ b/src/components/Tooltip/Tooltip.module.scss
@@ -1,11 +1,9 @@
 @import "../../styles/themes";
 @import "../../styles/typography";
 @import "../../styles/global-css-settings";
-
-
 $tooltip-z-index: 9999999999999999;
 
-.monday-style-tooltip {
+.tooltip {
   position: relative;
   display: inline-block;
   border-radius: $border-radius-small;
@@ -14,71 +12,71 @@ $tooltip-z-index: 9999999999999999;
   @include font-input();
   max-width: 50vw;
   word-break: break-word;
-
-  &.padding-size-md {
-    border-radius: $border-radius-medium;
-    padding: $spacing-medium;
-    @include font-input();
-  }
-
-  a.tooltip-white-link {
-    color: #fff;
-  }
 }
 
-.monday-style-tooltip-dark,
-.monday-style-tooltip-arrow.monday-style-arrow-dark {
+.tooltip.paddingSizeMd {
+  border-radius: $border-radius-medium;
+  padding: $spacing-medium;
+  @include font-input();
+}
+
+.tooltip a.tooltipWhiteLink {
+  color: #fff;
+}
+
+.dark,
+.arrow.dark {
   @include theme-prop(background-color, inverted-color-background);
   @include theme-prop(color, text-color-on-inverted);
 }
 
-.monday-style-tooltip-white,
-.monday-style-tooltip-arrow.monday-style-arrow-white {
+.white,
+.arrow.white {
   background-color: $white-theme-bg-color;
   color: $white-theme-font-color;
   @include theme-prop(box-shadow, box-shadow-medium);
 }
 
-.monday-style-tooltip-primary,
-.monday-style-tooltip-arrow.monday-style-arrow-primary {
+.primary,
+.arrow.primary {
   @include theme-prop(background-color, primary-color);
   @include theme-prop(color, text-color-on-primary);
 }
 
-.monday-style-tooltip-success,
-.monday-style-tooltip-arrow.monday-style-arrow-success {
+.success,
+.arrow.success {
   @include theme-prop(background-color, positive-color);
   @include theme-prop(color, text-color-on-primary);
 }
 
-.monday-style-tooltip-surface,
-.monday-style-tooltip-arrow.monday-style-arrow-surface {
+.surface,
+.arrow.surface {
   background-color: $surface-theme-bg-color;
   color: $surface-theme-font-color;
 }
 
-.monday-style-tooltip-private,
-.monday-style-tooltip-arrow.monday-style-arrow-private {
+.private,
+.arrow.private {
   @include theme-prop(background-color, private-color);
   @include theme-prop(color, text-color-on-primary);
 }
 
-.monday-style-tooltip-share,
-.monday-style-tooltip-arrow.monday-style-arrow-share {
+.share,
+.arrow.share {
   @include theme-prop(background-color, shareable-color);
   @include theme-prop(color, text-color-on-primary);
 }
 
-.monday-style-tooltip-error,
-.monday-style-tooltip-arrow.monday-style-arrow-error {
+.error,
+.arrow.error {
   @include theme-prop(background-color, negative-color);
   @include theme-prop(color, text-color-on-primary);
 }
 
-.monday-style-dialog-content-component {
+.contentComponent {
   padding: 6px;
+}
 
-  &:focus {
-    outline: none;
-  }
+.contentComponent:focus {
+  outline: none;
 }
