--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -9,8 +9,8 @@
     @include theme-prop(color, primary-text-color);
     cursor: pointer;
     border-radius: $border-radius-small;
-    margin: 0 8px;
-    padding: 0 8px;
+    margin: 0 var(--spacing-small);
+    padding: 0 var(--spacing-small);
     transition: all var(--motion-productive-medium) var(--motion-timing-enter);
 
     &:disabled {
@@ -44,4 +44,3 @@
     }
   }
 }
-
