Tab: remove inner overrides, introduce tabInnerClassName prop

--- a/src/components/Tabs/TabList/TabList.scss
+++ b/src/components/Tabs/TabList/TabList.scss
@@ -26,10 +26,10 @@
     .tabs-list {
       width: 100%;
 
-      .tab--wrapper {
+      .tab--wrapper-override {
         width: 100%;
 
-        .tab-inner {
+        .tab-inner-override {
           width: 100%;
         }
       }
