anchor-list-item-template-literal - improve test

--- a/css-modules-automation/codemod/tests/anchor-list-item-template-literal.scss
+++ b/css-modules-automation/codemod/tests/anchor-list-item-template-literal.scss
@@ -6,6 +6,10 @@
   font-size: $anchor-font-size;
   line-height: $text-line-height;
 
+  &-test {
+    background-color: red;
+  }
+
   &:not(:last-child) {
     margin-bottom: $spacing-small;
   }
