--- a/src/components/Tabs/TabPanel/TabPanel.module.scss
+++ b/src/components/Tabs/TabPanel/TabPanel.module.scss
@@ -1,2 +1,6 @@
 @import "../../../styles/themes";
 @import "../../../styles/typography";
+
+.tabPanelWrapper {
+  @include theme-prop(color, primary-text-color);
+}
