Code review fixes

--- a/src/components/ResponsiveList/ResponsiveList.module.scss
+++ b/src/components/ResponsiveList/ResponsiveList.module.scss
@@ -10,20 +10,20 @@
   justify-content: flex-end;
 }
 
-.responsiveListWrapper .responsiveListMenuButton {
+.responsiveList .responsiveListMenuButton {
   flex-shrink: 0;
 }
 
-.responsiveListDummy {
+.dummy {
   width: 100%;
   position: absolute;
   visibility: hidden;
 }
 
-.responsiveListMenuButtonDialog {
+.menuButtonDialog {
   display: flex;
 }
 
-.responsiveListMenuWrapperFlex {
+.menuWrapperFlex {
   display: flex;
 }
