fix responsive list bugs [prerelease]

--- a/src/components/ResponsiveList/ResponsiveList.module.scss
+++ b/src/components/ResponsiveList/ResponsiveList.module.scss
@@ -5,12 +5,12 @@
   position: relative;
 }
 
-.responsiveListWrapper {
+.responsiveList {
   display: flex;
   justify-content: flex-end;
 }
 
-.responsiveList .responsiveListMenuButton {
+.responsiveList .listMenuButton {
   flex-shrink: 0;
 }
 
