Support generic text and links in attention box

--- a/src/components/AttentionBox/__stories__/attentionBox.stories.scss
+++ b/src/components/AttentionBox/__stories__/attentionBox.stories.scss
@@ -2,6 +2,10 @@
 @import "../../../styles/typography";
 
 .monday-storybook-attention-box {
+  &--fixed-width {
+    width: 430px;
+  }
+
   &_column-wrapper {
     display: flex;
     flex-direction: column;
