Revert "Feature/sergeyro/css modules prerelease 1 (#1134)"
This reverts commit 8c96a9d453312474c509d576f60c168c36685b28.

--- a/src/components/VirtualizedGrid/VirtualizedGrid.scss
+++ b/src/components/VirtualizedGrid/VirtualizedGrid.scss
@@ -1,7 +1,7 @@
 @import "../../styles/themes";
 @import "../../styles/typography";
 
-.virtualizedListWrapper {
+.virtualized-grid--wrapper {
   height: 100%;
   width: 100%;
 }
