--- a/src/components/VirtualizedList/VirtualizedList.scss
+++ b/src/components/VirtualizedList/VirtualizedList.scss
@@ -1,7 +1,7 @@
 @import "../../styles/themes";
 @import "../../styles/typography";
 
-.virtualizedGridWrapper {
+.virtualized-list--wrapper {
   height: 100%;
   width: 100%;
 }
