--- a/src/components/Toast/ToastLink/ToastLink.scss
+++ b/src/components/Toast/ToastLink/ToastLink.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/global-css-settings";
 @import "../../../styles/themes";
 
-.actionLink {
+.monday-style-toast-action_link {
   @include theme-prop(color, text-color-on-primary);
   text-decoration: underline;
   -webkit-font-smoothing: auto;
