--- a/src/components/Tooltip/Tooltip.scss
+++ b/src/components/Tooltip/Tooltip.scss
@@ -1,9 +1,11 @@
 @import "../../styles/themes";
 @import "../../styles/typography";
 @import "../../styles/global-css-settings";
+
+
 $tooltip-z-index: 9999999999999999;
 
-.tooltip {
+.monday-style-tooltip {
   position: relative;
   display: inline-block;
   border-radius: $border-radius-small;
@@ -12,63 +14,71 @@ $tooltip-z-index: 9999999999999999;
   @include font-input();
   max-width: 50vw;
   word-break: break-word;
+
+  &.padding-size-md {
+    border-radius: $border-radius-medium;
+    padding: $spacing-medium;
+    @include font-input();
+  }
+
+  a.tooltip-white-link {
+    color: #fff;
+  }
 }
 
-.tooltip.paddingSizeMd {
-  border-radius: $border-radius-medium;
-  padding: $spacing-medium;
-  @include font-input();
-}
-
-.tooltip a.tooltipWhiteLink {
-  color: #fff;
-}
-
-.dark,
-.arrow.dark {
+.monday-style-tooltip-dark,
+.monday-style-tooltip-arrow.monday-style-arrow-dark {
   @include theme-prop(background-color, inverted-color-background);
   @include theme-prop(color, text-color-on-inverted);
 }
 
-.white,
-.arrow.white {
+.monday-style-tooltip-white,
+.monday-style-tooltip-arrow.monday-style-arrow-white {
   background-color: $white-theme-bg-color;
   color: $white-theme-font-color;
   @include theme-prop(box-shadow, box-shadow-medium);
 }
 
-.primary,
-.arrow.primary {
+.monday-style-tooltip-primary,
+.monday-style-tooltip-arrow.monday-style-arrow-primary {
   @include theme-prop(background-color, primary-color);
   @include theme-prop(color, text-color-on-primary);
 }
 
-.success,
-.arrow.success {
+.monday-style-tooltip-success,
+.monday-style-tooltip-arrow.monday-style-arrow-success {
   @include theme-prop(background-color, positive-color);
   @include theme-prop(color, text-color-on-primary);
 }
 
-.surface,
-.arrow.surface {
+.monday-style-tooltip-surface,
+.monday-style-tooltip-arrow.monday-style-arrow-surface {
   background-color: $surface-theme-bg-color;
   color: $surface-theme-font-color;
 }
 
-.private,
-.arrow.private {
+.monday-style-tooltip-private,
+.monday-style-tooltip-arrow.monday-style-arrow-private {
   @include theme-prop(background-color, private-color);
   @include theme-prop(color, text-color-on-primary);
 }
 
-.share,
-.arrow.share {
+.monday-style-tooltip-share,
+.monday-style-tooltip-arrow.monday-style-arrow-share {
   @include theme-prop(background-color, shareable-color);
   @include theme-prop(color, text-color-on-primary);
 }
 
-.error,
-.arrow.error {
+.monday-style-tooltip-error,
+.monday-style-tooltip-arrow.monday-style-arrow-error {
   @include theme-prop(background-color, negative-color);
   @include theme-prop(color, text-color-on-primary);
+}
+
+.monday-style-dialog-content-component {
+  padding: 6px;
+
+  &:focus {
+    outline: none;
+  }
 }
