change the build of css modules to calculate the hash according to content has

--- a/src/components/Avatar/Avatar.scss
+++ b/src/components/Avatar/Avatar.scss
@@ -1,10 +1,9 @@
 @import "../../styles/themes";
 @import "../../styles/states";
 @import "../../styles/global-css-settings";
+@import "./AvatarConstants";
 
-$avatar-size-large: 50px;
-$avatar-size-medium: 36px;
-$avatar-size-small: 28px;
+
 
 .monday-style-avatar {
   position: relative;
