--- a/src/components/AvatarGroup/AvatarGroup.module.scss
+++ b/src/components/AvatarGroup/AvatarGroup.module.scss
@@ -4,6 +4,7 @@
   flex-wrap: wrap;
   position: relative;
   padding: var(--spacing-xs) var(--spacing-small) var(--spacing-xs) var(--spacing-medium);
+  margin: 0;
 }
 
 .avatarContainer {
