Fix text field and search disabled appearance  (#1200)
* fix text field disabled cursor

* fix

--- a/src/components/TextField/TextField.scss
+++ b/src/components/TextField/TextField.scss
@@ -43,6 +43,10 @@
           @include theme-prop(color, disabled-text-color);
         }
       }
+      .input-component__icon--container.input-component__icon--container-active.input-component__icon--container-has-icon {
+          pointer-events: none;
+      }
+
       .input-component__icon--container.input-component__icon--container-has-icon {
         &:hover {
           background-color: transparent;
