--- a/src/components/ExpandCollapse/styles.module.scss
+++ b/src/components/ExpandCollapse/styles.module.scss
@@ -3,6 +3,10 @@
 }
 .showBorder {
   border: 1px solid var(--ui-border-color);
+  :global(.expand-collapse__header--open) {
+    border-bottom: 1px solid;
+    border-color: var(--ui-border-color);
+  }
 }
 
 .hideBorderBottom {
