Css modules migration - 4b: BreadcrumbsBar, BreadcrumbItem, BreadcrumbContent, Banner, Button, ButtonGroup

--- a/src/components/Menu/MenuItemButton/MenuItemButton.scss
+++ b/src/components/Menu/MenuItemButton/MenuItemButton.scss
@@ -10,7 +10,7 @@
   padding: $spacing-xs 0;
   align-items: center;
 
-  .monday-style-button {
+  .menu-item-button {
     width: 100%;
 
     .menu-item-button-content {
