--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -128,31 +128,31 @@ $disabled-on-primary-color-opacity: 0.5;
       &.monday-style-button {
         &--color {
           &-primary {
-            @include theme-prop(background-color, primary-color);
+            @include theme-prop(background, primary-color);
             &-active,
             &:hover,
             &:focus {
-              @include theme-prop(background-color, primary-hover-color);
+              @include theme-prop(background, primary-hover-color);
             }
           }
           &-positive {
-            @include theme-prop(background-color, positive-color);
+            @include theme-prop(background, positive-color);
             &-active,
             &:hover,
             &:focus {
-              @include theme-prop(background-color, positive-color-hover);
+              @include theme-prop(background, positive-color-hover);
             }
           }
           &-negative {
-            @include theme-prop(background-color, negative-color);
+            @include theme-prop(background, negative-color);
             &-active,
             &:hover,
             &:focus {
-              @include theme-prop(background-color, negative-color-hover);
+              @include theme-prop(background, negative-color-hover);
             }
           }
           &-on-primary-color {
-            @include theme-prop(background-color, text-color-on-primary);
+            @include theme-prop(background, text-color-on-primary);
             &-active,
             &:hover,
             &:focus {
@@ -167,7 +167,7 @@ $disabled-on-primary-color-opacity: 0.5;
           }
         }
         &.monday-style-button--disabled {
-          @include theme-prop(background-color, disabled-background-color);
+          @include theme-prop(background, disabled-background-color);
           @include theme-prop(color, disabled-text-color);
           cursor: not-allowed;
           pointer-events: none;
@@ -202,7 +202,7 @@ $disabled-on-primary-color-opacity: 0.5;
             }
             &:hover:not(.monday-style-button--color-primary-active),
             &:focus:not(.monday-style-button--color-primary-active) {
-              @include theme-prop(background-color, primary-background-hover-color);
+              @include theme-prop(background, primary-background-hover-color);
             }
           }
           &-positive {
@@ -211,7 +211,7 @@ $disabled-on-primary-color-opacity: 0.5;
             &-active,
             &:hover,
             &:focus {
-              @include theme-prop(background-color, positive-color-selected);
+              @include theme-prop(background, positive-color-selected);
             }
           }
           &-negative {
@@ -220,7 +220,7 @@ $disabled-on-primary-color-opacity: 0.5;
             &-active,
             &:hover,
             &:focus {
-              @include theme-prop(background-color, negative-color-selected);
+              @include theme-prop(background, negative-color-selected);
             }
           }
           &-on-primary-color {
@@ -261,7 +261,7 @@ $disabled-on-primary-color-opacity: 0.5;
             }
             &:hover:not(.monday-style-button--color-primary-active),
             &:focus:not(.monday-style-button--color-primary-active){
-              @include theme-prop(background-color, primary-background-hover-color);
+              @include theme-prop(background, primary-background-hover-color);
             }
           }
           &-positive {
@@ -269,7 +269,7 @@ $disabled-on-primary-color-opacity: 0.5;
             &-active,
             &:hover,
             &:focus {
-              @include theme-prop(background-color, positive-color-selected);
+              @include theme-prop(background, positive-color-selected);
             }
           }
           &-negative {
@@ -277,7 +277,7 @@ $disabled-on-primary-color-opacity: 0.5;
             &-active,
             &:hover,
             &:focus {
-              @include theme-prop(background-color, negative-color-selected);
+              @include theme-prop(background, negative-color-selected);
             }
           }
           &-on-primary-color {
